[package]
name = "http_snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
anyhow = "1.0.64"
console = "0.15.1"
futures = "0.3.24"
parking_lot = "0.12.1"
rand = "0.8.5"
reqwest = "0.11.11"
tokio = { version = "1.21.0", features = ["full"] }
